test/users/engin/sparse_bulk_dist/sparseBulkBoundsCheck.good
sparseBulkBoundsCheck.chpl:20: error: halt reached - Sparse domain/array index out of bounds
